# podaac-agents

./: .gitignore  AGENTS.md  README.md  example_stacktrace_error.txt  pyproject.toml
src/: stack_trace_cli.py
src/agents/: stack_trace_agent.py
src/podaac_agents/: __init__.py
src/podaac_agents/agents/: __init__.py  stack_trace_agent.py
tests/: __init__.py  test_stack_trace_agent.py
