[project]
name = "podaac-agents"
version = "0.1.0"
description = "A growing collection of intelligent AI agents designed to assist with Earth science data discovery, access, and analysis."
authors = [
    {name = "jamesfwood", url = "https://github.com/jamesfwood"}
]
requires-python = ">=3.12"
dependencies = [
    "strands-agents",
    "strands-agents-tools",
    "strands-agents-builder"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/tools"]

[tool.hatch.build]
editable-paths = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]
