[tool.poetry]
name = "podaac-agents"
version = "0.1.0"
description = "A growing collection of intelligent AI agents designed to assist with Earth science data discovery, access, and analysis."
authors = ["jamesfwood"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/podaac-agents"
packages = [{include = "podaac_agents", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
strands-agents = {version = "^1.14.0", extras = ["ollama", "openai"]}
strands-agents-tools = "^0.2.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[tool.poetry.scripts]
stack-trace = "stack_trace_cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
